@@ -27,6 +27,7 @@
 * Improve error handling for legacy data point, data source, publisher controllers
 * Ensure text renderers are always validated for data points
 * Add missing EventInstanceWrapper to email handler scripts
+* Bugfix for NPE in deprecated EmailEventHandlerModel in REST v1, suggest using v2 endpoints instead
 
 *Version 3.5.4*
 * Bugfix: Convert dataPointTags, installedModules, and fileStores tables in database conversions
